[gd_scene load_steps=4 format=3 uid="uid://cm3qlxhxe7etb"]

[ext_resource type="Script" uid="uid://dp8fpvl6e0ood" path="res://Scripts/Settings/settings.gd" id="1_it58s"]
[ext_resource type="PackedScene" uid="uid://3bkf4thpp5wr" path="res://Scenes/Window mode scene/window_mode_button.tscn" id="2_1jkum"]
[ext_resource type="PackedScene" uid="uid://e40g1gxj0r3l" path="res://Scenes/Resolution mode scene/resolution_mode_button.tscn" id="3_7ay3s"]

[node name="Settings_menu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_it58s")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 1

[node name="Volume_label" type="Label" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Volume:"

[node name="Volume" type="HSlider" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
max_value = 10.0

[node name="Mute_label" type="Label" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Mute:"

[node name="Mute" type="CheckBox" parent="MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="Window_Mode_Button" parent="MarginContainer/VBoxContainer" instance=ExtResource("2_1jkum")]
layout_mode = 2

[node name="MarginContainer2" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = 230.0
offset_bottom = 230.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer2"]
layout_mode = 2
theme_override_constants/separation = 0

[node name="Resolution_Mode_Button" parent="MarginContainer2/VBoxContainer" instance=ExtResource("3_7ay3s")]
layout_mode = 2

[node name="go_back_button" type="Button" parent="."]
layout_mode = 0
offset_left = 14.0
offset_top = 549.0
offset_right = 129.0
offset_bottom = 580.0
theme_override_font_sizes/font_size = 41
text = "Back to menu"

[connection signal="value_changed" from="MarginContainer/VBoxContainer/Volume" to="." method="_on_volume_value_changed"]
[connection signal="toggled" from="MarginContainer/VBoxContainer/Mute" to="." method="_on_mute_toggled"]
[connection signal="pressed" from="go_back_button" to="." method="_on_go_back_button_pressed"]
